; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ccaption_dec.c_handle_delete_end_of_row.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ccaption_dec.c_handle_delete_end_of_row.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Screen = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8, i8)* @handle_delete_end_of_row to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_delete_end_of_row(i32* %0, i8 signext %1, i8 signext %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8, align 1
  %6 = alloca i8, align 1
  %7 = alloca %struct.Screen*, align 8
  store i32* %0, i32** %4, align 8
  store i8 %1, i8* %5, align 1
  store i8 %2, i8* %6, align 1
  %8 = load i32*, i32** %4, align 8
  %9 = call %struct.Screen* @get_writing_screen(i32* %8)
  store %struct.Screen* %9, %struct.Screen** %7, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load %struct.Screen*, %struct.Screen** %7, align 8
  %12 = call i32 @write_char(i32* %10, %struct.Screen* %11, i32 0)
  ret void
}

declare dso_local %struct.Screen* @get_writing_screen(i32*) #1

declare dso_local i32 @write_char(i32*, %struct.Screen*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
